--- a/component/AudioPost.htm
+++ b/component/AudioPost.htm
@@ -15,6 +15,7 @@
             </span>
             <button>スクリプト表示</button>
         </div>
+        <p></p>
     </article>
     <style>
         article {
@@ -32,6 +33,12 @@
             background-color: inherit;
             border: none;
             cursor: pointer;
+        }
+        p {
+            display: none;
+        }
+        p.open {
+            display: block;
         }
     </style>
 </body>
