add delete button

--- a/component/AudioPost.htm
+++ b/component/AudioPost.htm
@@ -13,7 +13,8 @@
             <span id="date">
                 <span id="month">1</span>月<span id="day">1</span>日
             </span>
-            <button>スクリプト表示</button>
+            <button id="script">スクリプト表示</button>
+            <button id="delete">削除</button>
         </div>
         <p></p>
     </article>
